--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "content_scripts": [
         {
             "matches": ["https://*.tesla.com/*/teslaaccount/payment-history"],
-            "js": ["contentScript.js"]
+            "js": ["/lib/currency.min.js", "/lib/vue.min.js", "contentScript.js"]
         }
     ],
     "web_accessible_resources": ["template.html"]
