--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,10 @@
     ],
     "content_scripts": [
         {
-            "matches": ["https://*.tesla.com/*/teslaaccount/payment-history"],
+            "matches": [
+                "https://*.tesla.com/teslaaccount/payment-history*",
+                "https://*.tesla.com/*/teslaaccount/payment-history*"
+            ],
             "css": [
                 "/lib/chart.min.css",
                 "style.css"
